[package]
name = "rs-power-trigger"
version = "0.1.1"
authors = ["Alex Andru <alex007d@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rs-power-trigger"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = "0.49.1"
esp-idf-hal = "0.44.1"
esp-idf-sys = "0.35.0"
anyhow = "1.0.89"

colored = "2.1.0"
heapless = "0.8.0"
dotenv = "0.15.0"

[build-dependencies]
embuild = "0.32.0"
